# Helix

./: .dockerignore  .gitignore  .semgrepignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security.yml
benches/: benchmarks.rs
deployment/: Dockerfile
deployment/docker/: docker-compose.yml  entrypoint.sh  generate-ssl.sh  prometheus.yml  start-production.sh  veclite.toml  veclite_alerts.yml
deployment/docker/nginx/: nginx.conf
docs/design/: PDD.md  PRD.md  TDD.md
docs/guides/: DEPLOYMENT_GUIDE.md  PERFORMANCE_GUIDE.md  TUTORIAL.md
examples/: README.md  advanced_search.rs  basic_usage.rs  performance_benchmark.rs
go/: README.md
go/examples/basic_usage/: main.go
go/examples/performance/: main.go
go/veclite/: go.mod  veclite.go  veclite_test.go
security/: SECURITY.md  deny.toml
src/: error.rs  ffi.rs  hnsw.rs  lib.rs  persistence.rs  query.rs  storage.rs  types.rs
src/batch/: mod.rs
src/distance/: legacy.rs  mod.rs  simd.rs
src/memory/: mod.rs
tests/: cli_integration_tests.rs  cross_platform_tests.rs  integration_tests.rs  stress_tests.rs
