[package]
name = "helix"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Lightweight embeddable vector search library - SQLite for vector search"
homepage = "https://github.com/Rx947getrexp/Helix"
repository = "https://github.com/Rx947getrexp/Helix"
readme = "README.md"
exclude = [
    "docs/development/*",
    "benchmark_db.vlt",
    "database.vlt",
    "*.tmp"
]
keywords = ["vector", "search", "embedding", "similarity", "database"]
categories = ["database", "algorithms", "science"]

[lib]
name = "helix"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "helix"
required-features = ["cli"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
rayon = "1.7"
zstd = { version = "0.12", optional = true }
clap = { version = "4.0", features = ["derive"], optional = true }
serde_json = "1.0"
tracing = "0.1"
ordered-float = "4.0"
rand = "0.8"
rand_chacha = "0.3"
crc32fast = "1.3"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
tempfile = "3.0"
tracing-test = "0.2"

[features]
default = ["compression"]
compression = ["zstd"]
cli = ["clap"]
ffi = []
simd = []
performance = ["simd"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.bench]
debug = true

[[bench]]
name = "benchmarks"
harness = false

[profile.test]
opt-level = 2